[package]
name = "rmw_err"
version = "0.0.3"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/rmw-lib/rmw_err"
readme = "README.md"
description = "utils for log err"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4.17"

[dev-dependencies]
anyhow = "1.0.58"
